# oop_traffic_simulation

./: .gitignore  CMakeLists.txt  README.md  map.json
src/: main.cpp  mapload.cpp  mapload.h
src/algorithm/: AStarStrategy.cpp  AStarStrategy.h  BFSStrategy.cpp  BFSStrategy.h  DijkstraStrategy.cpp  DijkstraStrategy.h  PathFinding.h
src/model/: Bus.h  Car.h  EmergencyVehicle.h  Graph.cpp  Graph.h  Intersection.cpp  Intersection.h  Motorbike.h  Road.cpp  Road.h  Vehicle.cpp  Vehicle.h  intersection.h
src/tests/: test_framework.h  test_graph.cpp  test_pathfinding.cpp  test_vehicle.cpp
